<resources>
    <string name="app_name">QuizzAPP</string>
    <string name="attempts">Attempts</string>
    <string name="option_1">Option_1</string>
    <string name="option_2">Option_2</string>
    <string name="option_3">Option_3</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="quest">Quest</string>
    <string name="current_location">Current Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="give_up">Give Up</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
</resources>