<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/logo"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="40sp"
        >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:maxWidth="20dp"
        android:maxHeight="20dp"
        android:src="@drawable/logo2"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"
        />

    </LinearLayout>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20sp"
        android:hint="@string/Email"
        android:padding="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20sp"
        android:hint="@string/password"
        android:padding="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:singleLine="true"
        android:inputType="textPassword"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/password"
        android:layout_marginTop="20sp"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupbtn"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="#00FFB6"
            android:layout_margin="15sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginbtn"
            android:text="@string/login"

            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="#00FFB6"
            android:layout_margin="15sp"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</RelativeLayout>