<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Quizzes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20sp"
        android:padding="20sp"
        android:id="@+id/current">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attempted"
            android:text="@string/attempts"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current"
        android:id="@+id/images"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/quest" />


    </LinearLayout>


    <Button
        android:id="@+id/option1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/images"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/purple_500"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/option2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/option1"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/purple_500"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/option3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/option2"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/purple_500"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:id="@+id/giveUp"
            android:text="@string/give_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="#00FFB6"
            android:layout_below="@id/option3"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:layout_margin="20sp"
            />







</RelativeLayout>